@@ -1,41 +1,68 @@
 package com.parlament.service;
 
 import com.parlament.model.CartItem;
+import com.parlament.model.Category;
 import com.parlament.model.Order;
+import com.parlament.model.Product;
+import com.parlament.persistence.entity.OrderEntity;
+import com.parlament.persistence.entity.OrderItemEntity;
+import com.parlament.persistence.repo.OrderJpaRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
+import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 
 /**
  * Manages order creation and history for all users.
- * In-memory storage using ConcurrentHashMap.
  */
 @Service
 public class OrderService {
 
     private static final Logger log = LoggerFactory.getLogger(OrderService.class);
 
-    // Map: orderId → Order (global order registry)
-    private final Map<String, Order> allOrders = new ConcurrentHashMap<>();
+    private final OrderJpaRepository orderRepo;
 
-    // Map: userId → list of order IDs (for per-user history lookup)
-    private final Map<Long, List<String>> userOrderIndex = new ConcurrentHashMap<>();
+    public OrderService(OrderJpaRepository orderRepo) {
+        this.orderRepo = orderRepo;
+    }
 
     /**
      * Creates and persists a new order from the given cart items.
      */
+    @Transactional
     public Order createOrder(long userId, List<CartItem> items,
                               String customerName, String phone, String address) {
+        // Create domain object first (keeps existing formatting behavior)
         Order order = new Order(userId, items, customerName, phone, address);
 
-        allOrders.put(order.getOrderId(), order);
-        userOrderIndex.computeIfAbsent(userId, id -> new ArrayList<>())
-                      .add(order.getOrderId());
+        OrderEntity entity = new OrderEntity();
+        entity.setOrderId(order.getOrderId());
+        entity.setTelegramUserId(userId);
+        entity.setCustomerName(order.getCustomerName());
+        entity.setPhoneNumber(order.getPhoneNumber());
+        entity.setDeliveryAddress(order.getDeliveryAddress());
+        entity.setStatus(order.getStatus().name());
+        entity.setCreatedAt(OffsetDateTime.now());
 
+        List<OrderItemEntity> itemEntities = new ArrayList<>();
+        for (CartItem item : items) {
+            OrderItemEntity ie = new OrderItemEntity();
+            ie.setOrder(entity);
+            ie.setProductId(item.getProduct().getId());
+            ie.setProductName(item.getProduct().getName());
+            ie.setUnitPrice(item.getProduct().getPrice());
+            ie.setQuantity(item.getQuantity());
+            itemEntities.add(ie);
+        }
+        entity.setItems(itemEntities);
+
+        orderRepo.save(entity);
         log.info("Created order {} for user {} — total: {}", order.getOrderId(), userId, order.getFormattedTotal());
         return order;
     }
@@ -43,30 +70,62 @@ public class OrderService {
     /**
      * Returns all orders for a specific user, newest first.
      */
+    @Transactional(readOnly = true)
     public List<Order> getOrdersForUser(long userId) {
-        List<String> orderIds = userOrderIndex.get(userId);
-        if (orderIds == null || orderIds.isEmpty()) return Collections.emptyList();
-
-        // Collect and sort newest first
-        return orderIds.stream()
-                .map(allOrders::get)
+        return orderRepo.findByTelegramUserIdOrderByCreatedAtDesc(userId).stream()
+                .map(this::toDomain)
                 .filter(Objects::nonNull)
-                .sorted(Comparator.comparing(Order::getCreatedAt).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
      * Returns a specific order by its ID.
      */
+    @Transactional(readOnly = true)
     public Optional<Order> findById(String orderId) {
-        return Optional.ofNullable(allOrders.get(orderId));
+        return orderRepo.findById(orderId).map(this::toDomain);
     }
 
     /**
      * Returns the total number of orders placed by a user.
      */
+    @Transactional(readOnly = true)
     public int getOrderCount(long userId) {
-        List<String> orderIds = userOrderIndex.get(userId);
-        return orderIds == null ? 0 : orderIds.size();
+        return (int) orderRepo.countByTelegramUserId(userId);
+    }
+
+    private Order toDomain(OrderEntity entity) {
+        List<CartItem> items = new ArrayList<>();
+        if (entity.getItems() != null) {
+            for (OrderItemEntity itemEntity : entity.getItems()) {
+                Product p = new Product(
+                        itemEntity.getProductId(),
+                        itemEntity.getProductName(),
+                        "",
+                        itemEntity.getUnitPrice(),
+                        "",
+                        Category.ACCESSORIES
+                );
+                items.add(new CartItem(p, itemEntity.getQuantity()));
+            }
+        }
+
+        Order.Status status;
+        try {
+            status = Order.Status.valueOf(entity.getStatus());
+        } catch (Exception ignored) {
+            status = Order.Status.CONFIRMED;
+        }
+
+        return new Order(
+                entity.getOrderId(),
+                entity.getTelegramUserId(),
+                items,
+                entity.getCustomerName(),
+                entity.getPhoneNumber(),
+                entity.getDeliveryAddress(),
+                entity.getCreatedAt().toLocalDateTime(),
+                status
+        );
     }
 }
